--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 * {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 16px;
+    border-sizing: border-box;
 }
 
 body{
+    margin: 0;
     display: block;
     background-image: url(./sources/Stud\ Muffins\ Pattern.png);
     background-size: cover;
